# Hacked-2025

./: docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  main.py  package-lock.json  pyproject.toml
backend/icecast/config/: icecast.xml
backend/icecast/etc/: mime.types
backend/liquidsoap/: Dockerfile
backend/src/: api.py  fetch_news.py  fetch_papers.py  generate_tts.py  hello2.json  main.py  pubmeta.py  radio.liq  radio_server.py  reasearch_paper.py  research_paper.py  tavily_api.py
backend/src/llm/: llm.py  llm_old.py  pm_tools.py  rag.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/src/app/: PubMedCategories.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/Radio/: page.jsx
frontend/src/app/Topics/: page.tsx
frontend/src/app/news/: page.tsx
frontend/src/components/: NavBar.tsx  PaperCard.tsx  ResearchCard.tsx
src/app/: page.tsx
