[project]
name = "hacked-2025"
version = "0.1.0"
description = "Hackathon Project"
authors = [
    {name = "Logan",email = "lgntravis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
