[project]
name = "src"
version = "0.1.0"
description = "Hackathon Project"
authors = [{ name = "Logan", email = "lgntravis@gmail.com" }]
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "openai (>=1.63.0,<2.0.0)",
    "langgraph (>=0.2.73,<0.3.0)",
    "langsmith (>=0.3.8,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pypdf (>=5.3.0,<6.0.0)",
    "metapub (>=0.5.12,<0.6.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "sse-starlette (>=2.2.1,<3.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
